# rustcord

./: .gitignore  Cargo.toml  LICENSE  README.md
client/: Cargo.toml
client/src/: app.rs  lib.rs  main.rs
prisma/: schema.prisma
prisma/migrations/20220422011803_init/: migration.sql
prisma/migrations/20220425151030_init/: migration.sql
prisma/migrations/20220426002113_init/: migration.sql
prisma/migrations/20220426120300_init/: migration.sql
prisma/migrations/20220512015752_init/: migration.sql
server/: Cargo.toml
server/prisma/: Cargo.toml  schema.prisma
server/prisma/migrations/20220421174851_init/: migration.sql
server/src/: main.rs
server/src/middleware/: auth.rs
server/src/routes/: auth.rs  channels.rs  guilds.rs  mod.rs  socket.rs  users.rs
