[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
eframe = { version = "0.17", features = ["persistence"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = "1.0"
serde_json = "1.0"
tungstenite = "0.17"
flume = "0.10"
log = "0.4"
pretty_env_logger = "0.4"
