[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5", features = ["headers", "ws"] }
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.4.0" }
serde = "1.0"
serde_json = "1.0"
tokio = "1.17"
jsonwebtoken = "8"
hmac-sha256 = "1.1"
hex = "0.4"
chrono = "0.4"
load-dotenv = "0.1"
